Added the count enemy

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/PP2-TeamClockWork/FileContentIndex/4858c350-ae2c-48cc-8c25-1001aa5a0ca5.vsidx
+/.vs/PP2-TeamClockWork/FileContentIndex/43d30c2e-a9dd-42a4-9297-80fd0631c29c.vsidx
