--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/PP2-TeamClockWork/FileContentIndex/4858c350-ae2c-48cc-8c25-1001aa5a0ca5.vsidx
 /.vs/PP2-TeamClockWork/FileContentIndex/43d30c2e-a9dd-42a4-9297-80fd0631c29c.vsidx
 /.vs/PP2-TeamClockWork/FileContentIndex/3e03dd67-00e9-48d8-9623-fc8993a28ae8.vsidx
+/.vs/PP2-TeamClockWork/FileContentIndex/45ef2d1a-5700-463b-857e-645018f1532c.vsidx
