Enemy moves after shot

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /.vs/PP2-TeamClockWork/FileContentIndex/43d30c2e-a9dd-42a4-9297-80fd0631c29c.vsidx
 /.vs/PP2-TeamClockWork/FileContentIndex/3e03dd67-00e9-48d8-9623-fc8993a28ae8.vsidx
 /.vs/PP2-TeamClockWork/FileContentIndex/45ef2d1a-5700-463b-857e-645018f1532c.vsidx
+/.vs/PP2-TeamClockWork/FileContentIndex/7ab0af06-6e67-4ef5-8c3c-3d32a877c1e0.vsidx
