--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 ClockWorkHorrors/Assets/Scenes/SampleScene.unity
 ClockWorkHorrors/Assets/Scripts/buttonFunctions.cs
 *.unity
+*.mat
+*.prefab
+*.cs
+*.unity
